hello-app/helloweb-deployment.yaml
---
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START container_helloapp_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
        - name: hello-app
          image: gcr.io/google-samples/hello-app:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
# [END container_helloapp_deployment]

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello2
spec:
  selector:
    matchLabels:
      app: hello2
      tier: web2
  template:
    metadata:
      labels:
        app: hello2
        tier: web2
    spec:
      containers:
        - name: hello-app2
          image: gcr.io/google-samples/hello-app:2.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
