hello-app/helloweb-ingress-static-ip.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
  labels:
    app: hello
spec:
  rules:
    - http:
        paths:
          - path: /web1
            pathType: Prefix
            backend:
              serviceName: helloweb-backend
              servicePort: 8080
          - path: /web2
            pathType: Prefix
            backend:
              serviceName: helloweb-backend2
              servicePort: 8080
  backend:
    serviceName: helloweb-backend
    servicePort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: hello
spec:
  type: NodePort
  selector:
    app: hello
    tier: web
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend2
  labels:
    app: hello2
spec:
  type: NodePort
  selector:
    app: hello2
    tier: web2
  ports:
    - port: 8080
      targetPort: 8080
# [END container_helloapp_ingress]
